# rgm

./: CMakeLists.txt  README.md  environment.csh
Ana/: CMakeLists.txt
Ana/3N_Ana/: CMakeLists.txt  pd.cpp
Ana/Corrections/: Angular_Correction.cpp  Angular_Correction_Hists.cpp  CMakeLists.txt  Energy_Loss_CD_copyEdit.cpp  Energy_Loss_FD_copyEdit.cpp  Get_Radiation_Simulation.cpp  Momentum_Correction.cpp  Momentum_Correction_Deuterium.cpp  Momentum_Correction_Hists.cpp  Momentum_Correction_Hists_CD.cpp  Resolution_CD.cpp  Resolution_Graph.cpp  Resolution_Hist.cpp  Vertex_Graph.cpp
Ana/Q2_Ana/: CMakeLists.txt
Ana/cutFiles/: ana_he4.par
Ana/example_analysis/: CMakeLists.txt  example_ana.cpp  skim_events.cpp
Simulation/: GCF_to_LUND.C  targets.h
Simulation/submit/: submit_GCF_Full.sh
include/: Corrections.h  Functions.h
libraries/: CMakeLists.txt
